tests/neg/phantom-classOf-2.scala

class phantomClassOf {
  type Blinky <: Boo.BooAny

  classOf[Blinky] // error
}

object Boo extends Phantom {
  type BooAny = this.Any
}
